Add History support, fix file names and namespaces.

--- a/html/index.phtml
+++ b/html/index.phtml
@@ -11,4 +11,8 @@
     <p>Input:<input type=text size=20 name=input></p>
     <input type="submit" value="Run Algorithm" />
 </form>
+
+<form action="/php/controllers/MainController.php" method="GET">
+    <input type="submit" value="View History" />
+</form>
 </body>
